--- a/posts/2019-06-13.md
+++ b/posts/2019-06-13.md
@@ -588,32 +588,32 @@ In the first case we'll have a pair of authors (comment and post) and a forum id
     // Perhaps a comment links to a post ...
     let comm_post: Collection<_,(Edge,Forum)> =
     comms.map(|(id, (auth, link))| (link, (id, auth)))
-         .join_map(&posts, |_post, &(_id,auth_c), &(auth_p, forum)|
+         .join_map(&posts, |_post, &(_id,auth_c), &(auth_p, forum)| {
              let min = std::cmp::min(auth_c, auth_p);
              let max = std::cmp::max(auth_c, auth_p);
              ((min, max), forum)
-         )
+         })
          .semijoin(&edges);
 ```
 
 In the second case we'll have a pair of authors and a .. some comment identifier, not the forum identifier, which is less great! We will capture the identifier of the parent, and resolve that in just a moment.
 
 ```rust
-    /// Perhaps a comment links to a comment ...
+    // Perhaps a comment links to a comment ...
     let comm_comm: Collection<_,(Edge,Text)> =
     comms.map(|(id, (auth, link))| (link, (id, auth)))
-         .join_map(&comms, |_comm, &(_id,auth_c), &(auth_p,link)|
+         .join_map(&comms, |_comm, &(_id,auth_c), &(auth_p,link)| {
              let min = std::cmp::min(auth_c, auth_p);
              let max = std::cmp::max(auth_c, auth_p);
              ((min, max), link)
-         )
+         })
          .semijoin(&edges);
 ```
 
 To resolve the forum identity for a comment, we'll want access to all the comments, and the links they form from child to parent. These links form a directed forest (a bunch of trees), with the posts at the root. We'll also throw in self-links from each post to itself, to make our life easier in just a moment.
 
 ```rust
-    /// All comment -> parent links.
+    // All comment -> parent links.
     let links =
     comms.map(|(id, (_, link))| (id, link))
          .concat(&posts.map(|(id, _)| (id, id)));
@@ -644,14 +644,15 @@ I changed my test harness a bit to produce deterministic queries (enumerating a 
 
 ```
 Echidnatron% cargo run --release --bin ldbc_bi_25 -- ~/Projects/ldbc/ldbc_snb_datagen/social_network/ 10 false
-    Finished release [optimized] target(s) in 0.10s
+    Finished release [optimized] target(s) in 0.14s
      Running `target/release/ldbc_bi_25 /Users/mcsherry/Projects/ldbc/ldbc_snb_datagen/social_network/ 10 false`
 comms: read 2052169 lines
 posts: read 1003605 lines
 knows: read 180623 lines
 performing Bi-directional Dijkstra on (8250,8466) nodes, 180623 edges:
-2.08377083s	loaded
-5.048525065s	stable
+2.347249502s	loaded
+5.334716881s	stable
+
 ```
 
 The first thing to note is that `comms` and `posts` are a fair bit bigger than `knows`. We aren't doing quite the same exotic computation with them, though, so it's not horribly painful. We haven't even thought about how we might maintain `posts` in an arrangement and re-use it in two of our joins (go check!).
@@ -659,23 +660,34 @@ The first thing to note is that `comms` and `posts` are a fair bit bigger than `
 Once we get going, we start to see some output:
 
 ```
-5.144198441s	round 0 (query: 1829 -> 5274)
-5.424653593s	round 1 (query: 2269 -> 7567)
+5.429971809s	round 0 (query: 1829 -> 5274)
+5.71453694s	round 1 (query: 2269 -> 7567)
 SHORTEDGE: (((2843, 10169), (4555, 5274)), 3, 1)
 SHORTEDGE: (((2843, 10169), (5274, 7216)), 3, 1)
 SHORTEDGE: (((2843, 10169), (2843, 4555)), 3, 1)
 SHORTEDGE: (((2843, 10169), (7216, 10169)), 3, 1)
 EDGESCORE: (((2843, 4555), 99268), 3, 24)
+EDGESCORE: (((2843, 4555), 1055757), 3, 38)
 EDGESCORE: (((4555, 5274), 36261), 3, 1)
 EDGESCORE: (((4555, 5274), 66684), 3, 70)
-EDGESCORE: (((4555, 5274), 137438982755), 3, 1)
+EDGESCORE: (((4555, 5274), 99268), 3, 16)
+EDGESCORE: (((4555, 5274), 1051665), 3, 2)
+EDGESCORE: (((4555, 5274), 137438982755), 3, 2)
+EDGESCORE: (((4555, 5274), 137439020231), 3, 1)
 EDGESCORE: (((4555, 5274), 274878002164), 3, 1)
-EDGESCORE: (((4555, 5274), 274878007528), 3, 1)
+EDGESCORE: (((4555, 5274), 274878007528), 3, 4)
+EDGESCORE: (((4555, 5274), 412317917630), 3, 1)
 EDGESCORE: (((5274, 7216), 3536), 3, 50)
-EDGESCORE: (((5274, 7216), 55135), 3, 1)
+EDGESCORE: (((5274, 7216), 22114), 3, 1)
+EDGESCORE: (((5274, 7216), 55135), 3, 3)
+EDGESCORE: (((5274, 7216), 66684), 3, 94)
 EDGESCORE: (((5274, 7216), 1786706465559), 3, 1)
+EDGESCORE: (((7216, 10169), 3536), 3, 58)
 EDGESCORE: (((7216, 10169), 88394), 3, 12)
-5.693322633s	round 2 (query: 2843 -> 10169)
+EDGESCORE: (((7216, 10169), 1511828505852), 3, 2)
+EDGESCORE: (((7216, 10169), 1511828505853), 3, 1)
+5.990712664s	round 2 (query: 2843 -> 10169)
+
 ```
 
 Here `SHORTEDGE` are edges observed on shortest paths for indicate queries. At the moment, the source is `2843` and the destination is `10169`. Apparently we can get from one to the other on a short path through nodes with short names, which is a relief.
