--- a/posts/2019-06-13.md
+++ b/posts/2019-06-13.md
@@ -652,7 +652,6 @@ knows: read 180623 lines
 performing Bi-directional Dijkstra on (8250,8466) nodes, 180623 edges:
 2.347249502s	loaded
 5.334716881s	stable
-
 ```
 
 The first thing to note is that `comms` and `posts` are a fair bit bigger than `knows`. We aren't doing quite the same exotic computation with them, though, so it's not horribly painful. We haven't even thought about how we might maintain `posts` in an arrangement and re-use it in two of our joins (go check!).
@@ -699,6 +698,68 @@ This continues for a bit, and generally seems to be pretty brisk (as before, the
 Things are looking pretty good, I figure. Of course, we aren't actually testing this for correctness yet. I'm not entirely sure when we are going to get around to that (or how, to be honest), but for the moment let's just imagine that we are quite clever and fast.
 
 ### Filtering by dates
+
+We are getting pretty close to the end here. I think.
+
+We have so far produced two collections, `shortest_edges` and `edge_scores`, containing respectively pairs of goals and the edges of their shortest paths, and pairs of relevant edges and forums in which their endpoints have interacted (with multiplicities for the numbers of times).
+
+Our next step is to put these together with our query inputs, pairs of goals and lower and upper time bounds, and restrict the scores for a query down to forums with a creation date within the time bounds. There will be some `join`s.
+
+I did this in-line, rather than creating a method for it.
+
+```rust
+    // 3. Merge queries and scores, filter by start and end dates.
+    let _scored_edges =
+    query
+        .join_map(&shortest_edges, |&goal, &bounds, &edge| (edge, (goal, bounds)))
+        .join_map(&edge_scores, |&edge, &(goal, bounds), &forum| (forum, (goal, edge, bounds)))
+        .join_map(&forum, |_forum, &(goal, edge, bounds), &time| 
+            (time >= bounds.0 && time <= bounds.1, goal, edge)
+        )
+        .filter(|x| x.0)
+        .map(|(_, goal, edge)| (goal, edge))
+        .concat(&shortest_edges)
+        .count()
+        .map(|(x,c)| (x,c-1))
+        .inspect(|x| println!("SCORED: {:?}", x))
+        .probe_with(&mut probe);
+```
+
+The gist is what you might expect: each join fetches some data that we've already computed: first the shortest path edges for a query, then the scores for each of those edges, then the creation date for referenced forums. We filter down by forums within the bounds, and then finally, just before we accumulate up the scores, we toss in a copy of `shortest_edges` for good measure.
+
+This last step is there to deal with the case that there may be no score for an edge, and we don't want to lose track of it in that case because we still have to re-assemble the shortest paths. What we are doing is kin to a "LEFT JOIN" where keys on the left side of the join that do not match are nonetheless surfaced with a NULL value indication. We can achieve the same thing by stirring in all keys, and then subtracting one from the count that results.
+
+Most of the computation above should be relatively cheap, because we have few queries (100) and the `shortest_edges` and `edge_scores` collections are both restricted by the query as well.
+
+#### Trying it out
+
+I've changed my evaluation framework *again*, sorry, this time to try and get at incremental update strategies. Also, I found the actual queries that LDBC uses for BI query 25, and so I'll just use those.
+
+We have five inputs, one for the queries and four for data. We'll load up all 100 queries at the beginning of time, so that we can monitor them as the computation proceeds. Perhaps we should add and remove them to get query latency measurements, but we'll do that in another experiment. For now, all queries are loaded initially, and then all other data are loaded in order of their `creationDate` attribute.
+
+There are some three million plus events we are looking at, which means our output describes 300 million BI25 queries, each of the 100 queries refreshed after each of the event additions.
+
+The performance depends surprisingly strongly on the physical batching in the input. If the data go in all in one batch (we still see all 300M refreshes) it takes 38 seconds (so "~10M refreshes / second" which is total BS but something I'm skilling up on). As the batch size decreases the time increases, thusly:
+
+| batch size | elapsed time | refresh rate |
+|-----------:|-------------:|-------------:|
+|      1,000 |     229.490s |      14.37Hz |
+|     10,000 |     109.740s |       3.01Hz |
+|    100,000 |      55.024s |       0.60Hz |
+|  1,000,000 |      42.780s |       0.07Hz |
+| 10,000,000 |      38.375s |       0.03Hz | 
+
+If we put a second worker into the mix, things mostly speed up, except for the small batch size. 
+
+| batch size | elapsed time | refresh rate |
+|-----------:|-------------:|-------------:|
+|      1,000 |      !#@$ing |      forever |
+|     10,000 |      79.430s |       4.15Hz |
+|    100,000 |      36.675s |       0.90Hz |
+|  1,000,000 |      26.160s |       0.12Hz |
+| 10,000,000 |      24.138s |       0.04Hz | 
+
+No clue what is going on with those smaller batches, except yet another bottleneck to be discovered. The work of the scientist is never done!
 
 ### Reconstructing paths
 
