--- a/posts/2019-06-13.md
+++ b/posts/2019-06-13.md
@@ -6,8 +6,8 @@ Rather than writting a massive missive about how you write such a query in one o
 
 * [Breaking down the problem.](https://github.com/frankmcsherry/blog/blob/master/posts/2019-06-13.md#breaking-down-the-problem) (2019-06-13)
 * [Finding shortest paths in graphs.](https://github.com/frankmcsherry/blog/blob/master/posts/2019-06-13.md#finding-shortest-paths-in-graphs-2019-06-16) (2019-06-16)
-* [Scoring interactions of people](https://github.com/frankmcsherry/blog/blob/master/posts/2019-06-13.md#scoring-interactions-of-people-2019-06-19). (2019-06-19)
-* Filtering by dates.
+* [Scoring interactions of people.](https://github.com/frankmcsherry/blog/blob/master/posts/2019-06-13.md#scoring-interactions-of-people-2019-06-19) (2019-06-19)
+* [Filtering by dates.](https://github.com/frankmcsherry/blog/blob/master/posts/2019-06-13.md#filtering-by-dates-2019-06-23). (2019-06-23)
 * Reconstructing paths.
 * A declarative implementation.
 
@@ -697,7 +697,7 @@ This continues for a bit, and generally seems to be pretty brisk (as before, the
 
 Things are looking pretty good, I figure. Of course, we aren't actually testing this for correctness yet. I'm not entirely sure when we are going to get around to that (or how, to be honest), but for the moment let's just imagine that we are quite clever and fast.
 
-### Filtering by dates
+### Filtering by dates (2019-06-23)
 
 We are getting pretty close to the end here. I think.
 
