--- a/posts/2019-06-13.md
+++ b/posts/2019-06-13.md
@@ -7,7 +7,7 @@ Rather than writting a massive missive about how you write such a query in one o
 * [Breaking down the problem.](https://github.com/frankmcsherry/blog/blob/master/posts/2019-06-13.md#breaking-down-the-problem) (2019-06-13)
 * [Finding shortest paths in graphs.](https://github.com/frankmcsherry/blog/blob/master/posts/2019-06-13.md#finding-shortest-paths-in-graphs-2019-06-16) (2019-06-16)
 * [Scoring interactions of people.](https://github.com/frankmcsherry/blog/blob/master/posts/2019-06-13.md#scoring-interactions-of-people-2019-06-19) (2019-06-19)
-* [Filtering by dates.](https://github.com/frankmcsherry/blog/blob/master/posts/2019-06-13.md#filtering-by-dates-2019-06-23). (2019-06-23)
+* [Filtering by dates.](https://github.com/frankmcsherry/blog/blob/master/posts/2019-06-13.md#filtering-by-dates-2019-06-23) (2019-06-23)
 * Reconstructing paths.
 * A declarative implementation.
 
