--- a/posts/2019-08-03.md
+++ b/posts/2019-08-03.md
@@ -253,7 +253,7 @@ Time: 2.472 ms
 mcsherry=>
 ```
 
-This is just reporting the numbers, rather than actually traversing the data, sot it is pretty fast. User traces will get compacted at some point (probably Monday) and get us back to these single-digit latencies.
+This is just reporting the numbers, rather than actually traversing the data, so it is pretty fast. User traces will get compacted at some point (probably Monday) and get us back to these single-digit millisecond latencies.
 
 ### Large number, the second.
 
