--- a/posts/2019-08-03.md
+++ b/posts/2019-08-03.md
@@ -37,7 +37,7 @@ We are just about ready to start screwing around. But we don't have any data! Th
 
 Timely dataflow and differential dataflow both produce timestamped logs of system events they produce, for example dataflow construction and scheduling in timely dataflow, and state (arrangement) management in differential dataflow. I've just gone and mirrored this data up as continually evolving relations.
 
-For example, let's look at the dataflow operators in the system (some formatting liberties take to remove UUID guff):
+For example, let's look at the dataflow operators in the system (some formatting liberties taken to remove UUID guff):
 
 ```
 mcsherry=> peek logs_operates;
@@ -59,7 +59,7 @@ Time: 6.888 ms
 mcsherry=>
 ```
 
-There isn't too much to see here. We have two dataflows, each of which are doing some vanilla things (the `dual` relation is apparently some vistigial relation that databases are assumed to have, much like your appendix).
+There isn't too much to see here. We have two dataflows, each of which are doing some vanilla things (the `dual` relation is apparently some vestigial relation that databases are assumed to have, much like your appendix).
 
 You might have noticed that the dataflow addresses seem to start with four, and go up from there. Smart! The first several dataflows are pre-installed to process log records, and .. are not themselves logged because you can imagine what goes wrong there.
 
