Fix a tiny little typo

--- a/posts/2019-08-03.md
+++ b/posts/2019-08-03.md
@@ -316,7 +316,7 @@ Now, that works great in normal circumstances, but there is a quirk of timely da
 
 This turns out to be not all that hard.
 
-I don't want to argue that this should all make sense, but I thought I would show you the code that fixes thing. In this case, `acknowledged1` is the upper limit of timestamps observed in input batches, which may need to be further advanced by a greater upper limit provided by timely dataflow through the `input1.frontier()`.
+I don't want to argue that this should all make sense, but I thought I would show you the code that fixes things. In this case, `acknowledged1` is the upper limit of timestamps observed in input batches, which may need to be further advanced by a greater upper limit provided by timely dataflow through the `input1.frontier()`.
 
 ```rust
     // We may learn that input frontiers have advanced with empty batches.
