--- a/posts/2019-08-17.md
+++ b/posts/2019-08-17.md
@@ -10,15 +10,15 @@ We are going to talk through progress tracking, but using [differential dataflow
 
 This post is a bit long, so I've tried to break it up into independent components that you can read through and mentally checkpoint your understanding after each.
 
-0. [Background on tracking progress in a timely dataflow.]()
-1. [Types and traits to model a timely dataflow.]()
-2. [Detecting cycles in a timely dataflow graph.]()
-3. [Tracking progress in a running timely dataflow.]()
+0. [Background on tracking progress in a timely dataflow.](https://github.com/frankmcsherry/blog/blob/master/posts/2019-08-17.md#tracking-progress-in-timely-dataflow-1)
+1. [Types and traits to model a timely dataflow.](https://github.com/frankmcsherry/blog/blob/master/posts/2019-08-17.md#types-and-traits-to-model-timely-dataflows)
+2. [Detecting cycles in a timely dataflow graph.](https://github.com/frankmcsherry/blog/blob/master/posts/2019-08-17.md#detecting-cycles-in-timely-dataflows)
+3. [Tracking progress in a running timely dataflow.](https://github.com/frankmcsherry/blog/blob/master/posts/2019-08-17.md#tracking-progress-in-a-running-timely-dataflow)
 
 These topics get at the core of what goes on in timely dataflow, but there are some advanced topics too! In particular, advanced topics related to how timely dataflows can present themselves as operators contained in a larger timely dataflow.
 
-4. [Summarizing timely dataflow structure.]()
-5. [Extended progress tracking for nested dataflows.]()
+4. [Summarizing timely dataflow structure.](https://github.com/frankmcsherry/blog/blob/master/posts/2019-08-17.md#bonus-summarizing-timely-dataflow-structure)
+5. [Extended progress tracking for nested dataflows.](https://github.com/frankmcsherry/blog/blob/master/posts/2019-08-17.md#bonus-extended-progress-tracking-for-nested-dataflows)
 
 These advanced topics are important for timely dataflow's modular implementation, which avoids anyone needing to have a full view of the whole dataflow, but you can understand most of what goes on in timely dataflow progress tracking without needing these additional details.
 
