--- a/posts/2020-02-15.md
+++ b/posts/2020-02-15.md
@@ -1,6 +1,6 @@
 ## Differential dataflow meets calculus
 
-It's been a while since we've done something interesting in differential dataflow. So, today I thought we would try to do something pretty interesting. We're going to splat down just a little bit of code, and it will increase the capabilities of differential dataflow multiple-fold.
+It's been a while since we've done something interesting in [differential dataflow](https://github.com/TimelyDataflow/differential-dataflow). So, today I thought we would try to do something pretty interesting. We're going to splat down just a little bit of code, and it will increase the capabilities of differential dataflow multiple-fold.
 
 **tl;dr** we are going to introduce the ability to programmatically differentiate and integrate differential collections, and insert differential computation between these two actions to do some very cool things. If you are familiar with the concepts, we'll do [as of joins](https://code.kx.com/q/ref/aj/) and [low-memory delta queries](https://github.com/TimelyDataflow/differential-dataflow/tree/master/dogsdogsdogs) using just a few lines of code.
 
