--- a/posts/2020-02-15.md
+++ b/posts/2020-02-15.md
@@ -79,7 +79,7 @@ This computation produces a collection which contains the triples `(a,b,c)` wher
 
 What's not to like?
 
-Well, trying running. Let me know how it goes.
+Well, try running it. Let me know how it goes.
 
 Differential dataflow's stateful operators will keep a fairly substantial amount of state around. The first `join_map` will maintain two indexed copies of `edges`, and while we could optimize that down to one ([shared arrangements](https://github.com/TimelyDataflow/differential-dataflow/blob/master/sosp2019-submission.pdf)!) this is just proportional to the input and not a huge deal. On the other hand, the `semijoin` operator will maintain indexed representations of *its* inputs, one of which is `edges` and is fine, but the other of which is the ouput of the first join and **IT IS NOT FINE**.
 
