--- a/posts/2020-02-15.md
+++ b/posts/2020-02-15.md
@@ -139,7 +139,7 @@ That derivative collection is now six updates, two `+1` upblips each followed im
 
 It turns out it is a bit harder to do the reverse, what would be "integration".
 
-Integration would be accomplished by just erasing the "cancelations", but we can't really tell which subtractions were introduced by differentiation, and which subtractions were actual changes to the source data. For example, there will be two `-1` updates corresponding to the downblips of the first two increments, and we want to remove them, but the `-2` update is real and we want to remove the `+2` that immediately follows it.
+Integration would be accomplished by just erasing the "cancellations", but we can't really tell which subtractions were introduced by differentiation, and which subtractions were actual changes to the source data. For example, there will be two `-1` updates corresponding to the downblips of the first two increments, and we want to remove them, but the `-2` update is real and we want to remove the `+2` that immediately follows it.
 
 One cheesy hack, which gives the right intuition, is to think of `time` as being only the even integers. We reserve the odd integers for subtracting out changes at the even integers. The updates happen at even integers, and their retractions happen at odd integers. Integration is now just dropping updates at odd times. Our careful use of times allowed us to distinguish source changes from their retractions.
 
