--- a/posts/2020-03-26.md
+++ b/posts/2020-03-26.md
@@ -4,7 +4,7 @@
 
 ---
 
-This post is originally available at the [Materialize blog](https://materialize.io/blog/).
+This post is originally available at the [Materialize blog](https://materialize.io/upserts-in-differential-dataflow/).
 
 "Upsert" is a portmanteau of "update" and "insert", and they are (I believe) used primarily in reconciling merges of databases: they allow you to think about inserting and updating data in a consistent framework: each new keyed record either inserts the record (if the key does not yet exist) or updates the value if they key does exist.
 
